@@ -1,5 +1,7 @@
 *SVN*
 
+* Modify routing so that you can say :require => { :method => :post } for a route, and the route will never be selected unless the request method is POST. Only works for route recognition, not for route generation. [Jamis Buck]
+
 * Added :add_headers option to verify which merges a hash of name/value pairs into the response's headers hash if the prerequisites cannot be satisfied. [Sam Stephenson]
   ex. verify :only => :speak, :method => :post, 
              :render => { :status => 405, :text => "Must be post" }, 
